...
    <string name="date">Date</string>
    <string name="delete_rate">Cancel/Rate</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="price">Price</string>
    <string name="prices">Prices</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="downChalet">Downloading Chalets</string>
    <string name="wait">Please wait</string>

    <!-- Strings related to Settings -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="userType">Who are you?</string>
    <string name="afterSignup">Kindly login with your email/password</string>
    <string name="bookVistor">Kindly login to reserve this chalet</string>

    <!-- Error messages -->
    <string name="erVerifyPassword">Password not match</string>
    <string name="erEmptyField">All fields are required</string>
    <string name="erAuth">Email or Password did not meet the requirements</string>
...
        <item>Low customer rating </item>
    </string-array>


    <string name="owner">Owner</string>
    <string name="chaletOwner">Rest-house/Chalet owner</string>
    <string name="chaletName">Chalet Name</string>
    <string name="promotion">Promotion</string>
    <string name="newChalet">Add a new chalet</string>
    <string name="mapView">Show By Maps</string>
    <string name="doneUpload">Upload successfully!</string>
    <string name="promot">ALMORTAH team will keep the promoted rest-house and chalet always in
        the top of the home page and we will do our best to keep your rest-house/chalet to be the best recommended place.
...
    <string name="day">1 Day</string>
    <!-- Customer strings -->
    <string name="customer">Customer</string>
    <string name="username">Username</string>
    <string name="fullname">Full name</string>
    <string name="phone">Phone number. ex:512345678</string>
    <string name="email">Valid Email</string>
    <string name="password">Password (More than 6 characteristics)</string>
    <string name="verifyPassword">Verify Password</string>
    <string name="searchChalet">Search for rest-house/chalet</string>
    <string name="chaletRate">Rate this chalet</string>
    <string name="freeDate">This rest-house/chalet is free at </string>
    <string name="checkin">Check-in time</string>
...
    <string name="checkAv">Check the availability</string>
    <string name="checkAvText">Choose the date</string>
    <string name="busyDay">Sorry this day is booked!</string>
    <string name="freeDay">This day is available</string>
    <string name="chaletNameHistory">Rest-house/Chalet</string>
    <string name="bestChalet">Recommended Rest-house/Chalet</string>
    <string name="normalPrice">Normal days</string>
    <string name="weekendPrice">Weekend</string>
    <string name="eidPrice">Eid</string>


    <string name="overview">
        This project aims to improve users experience when they are aiming to reserve
        a rest-house or a chalet in Saudi Arabia. It allows customers to search for properties and
        reserve them efficiently. Moreover, it permits the property’s owners to manage the reservation process,
...
    <string name="emailAddress">My email</string>
    <string name="myPhone">My phone</string>
    <string name="delete">Delete</string>
    <string name="sure">Are you sure you wanted to make this decision?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload">Upload images</string>
    <string name="description">Chalet description</string>
    <string name="location">Location</string>
    <string name="brief">Brief</string>
    <string name="idea">Idea</string>
    <string name="ideaName">Dr. Abdulaziz Alsadhan\nKing Saud University\nCollege of Computer and Information
        Sciences\nDept. of Software Engineering</string>
    <string name="team">Team members</string>
...
