<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/design"
    android:orientation="vertical"
    tools:context="com.almortah.almortah.AddChalet"
    android:layout_weight="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="@android:color/white" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="vertical">
    <EditText
        android:id="@+id/chaletName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:hint="@string/chaletName" />
    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:hint="@string/prices" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/normalPrice"
        android:maxLength="4"
        android:layout_gravity="start"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/normalPrice"
        android:digits="0,1,2,3,4,5,6,7,8,9"
        android:inputType="number" />

        <EditText
            android:id="@+id/weekendPrice"
            android:layout_width="110dp"
            android:layout_marginStart="10dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:maxLength="4"
            android:hint="@string/weekendPrice"
            android:digits="0,1,2,3,4,5,6,7,8,9"
            android:inputType="number" />

        <EditText
            android:id="@+id/eidPrice"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:maxLength="4"
            android:hint="@string/eidPrice"
            android:digits="0,1,2,3,4,5,6,7,8,9"
            android:inputType="number" />

    </LinearLayout>

    <EditText
        android:id="@+id/description"
        android:lines="4"
        android:minLines="0"
        android:gravity="top|left"
        android:maxLines="4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:maxLength="500"
        android:hint="@string/description" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:hint="@string/location" />
        <fragment
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
    <Button
        android:layout_width="160dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:text="@string/upload"
        android:background="@color/colorBlue"
        android:textColor="@color/colorWhite"
        android:id="@+id/upload"/>

    <Button
        android:layout_width="160dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:text="@string/submit"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        android:id="@+id/submitChalet"/>
        </LinearLayout>

    </LinearLayout>
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            />
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>
