...
        android:layout_height="60dp"
        android:backgroundTint="@color/colorBlue"
        android:text="@string/guest"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorGreen"
        android:text="@string/login"
        android:textColor="@color/colorWhite" />

...
